--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "A Object->TOML encoder/converter only for TOML v0.4.0",
   "main": "tomlify.js",
+  "types": "tomlify.d.ts",
   "scripts": {
     "test": "mocha --bail --reporter min test/*.js"
   },
