--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   },
   "homepage": "https://github.com/jakwings/tomlify-j0.4",
   "devDependencies": {
-    "js-yaml": "~3.2.7",
-    "mocha": "~2.2.4",
-    "should": "~6.0.1",
-    "toml-j0.4": "^1.0.9"
+    "js-yaml": "~3.9.0",
+    "mocha": "~3.4.2",
+    "should": "~11.2.1",
+    "toml-j0.4": "~1.1.0"
   }
 }
