--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "tomlify.js",
   "types": "tomlify.d.ts",
   "scripts": {
+    "dist": "uglifyjs --verbose --compress --mangle -o dist/tomlify.min.js tomlify.js",
+    "prepare": "npm run dist",
     "test": "mocha --bail --reporter min test/*.js"
   },
   "keywords": [
@@ -29,6 +31,7 @@
     "js-yaml": "~3.9.0",
     "mocha": "~3.4.2",
     "should": "~11.2.1",
+    "uglify-js": "~3.0.25",
     "toml-j0.4": "~1.1.0"
   }
 }
