--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tomlify-j0.4",
-  "version": "3.0.0-alpha.0",
+  "version": "3.0.0",
   "description": "A Object->TOML encoder/converter only for TOML v0.4.0",
   "main": "tomlify.js",
   "scripts": {
